clusters/apps/env/production/home/zigbee2mqtt/cluster-mesh/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/instance: zigbee2mqtt
    app.kubernetes.io/name: zigbee2mqtt
