clusters/apps/env/production/home/zigbee2mqtt/cluster-mesh/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: ${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}`)"
      middlewares:
        - name: oauth-auth
          namespace: auth-system
        - name: oauth-errors
          namespace: auth-system
      priority: 10
      services:
        - name: zigbee2mqtt
          port: 8080
          nativeLB: true
    - kind: Rule
      match: "Host(`${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}`) && PathPrefix(`/oauth2/`)"
      priority: 15
      middlewares:
        - name: oauth-headers
          namespace: auth-system
      services:
        - name: google-auth-oauth2-proxy
          namespace: auth-system
          port: 80
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: ${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}
